--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Check out the README.txt for more info.
 <!-- CSS -->
 <link rel="stylesheet" href="http://www.wufoo.com/stylesheets/public/forms/css/index.css" type="text/css" />
 <link rel="stylesheet" href="css/example.css" type="text/css" />
+<link rel="stylesheet" href="css/custom.css" type="text/css" />
 
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -38,8 +39,8 @@ Check out the README.txt for more info.
 	<form class="wufoo" action="#" novalidate>
 
 		<header id="header" class="info">
-			<h2>Title</h2>
-			<div>Description</div>
+			<h2>Code for America Speaker's Request</h2>
+			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam hic repudiandae aspernatur? Nostrum atque accusamus, porro mollitia necessitatibus unde.</div>
 		</header>
 
 		<ul>
