--- a/testing/index.html
+++ b/testing/index.html
@@ -23,7 +23,7 @@ Check out the README.txt for more info.
 <!-- CSS -->
 <link rel="stylesheet" href="http://www.wufoo.com/stylesheets/public/forms/css/index.css" type="text/css" />
 <link rel="stylesheet" href="css/example.css" type="text/css" />
-<link rel="stylesheet" href="css/custom.css" type="text/css" />
+<link rel="stylesheet" href="../cfa-wufoo.css" type="text/css" />
 
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
